tests/parse/parse.exp
Error ----------------------------------------------------------------------------------------------- fail-flow-2.js:4:1

Unexpected token `.`, expected the start of a statement

   4| .
      ^


Error ------------------------------------------------------------------------------------------------- fail-flow.js:3:1

Unexpected token `.`, expected the start of a statement

   3| .
      ^


Error ------------------------------------------------------------------------------------------------------ fail.js:1:1

Unexpected token `.`, expected the start of a statement

   1| .
      ^


Error ------------------------------------------------------------------------------------------- no_parse_error.js:6:13

Cannot perform arithmetic operation because string [1] is not a number. [unsafe-addition]

   no_parse_error.js:6:13
   6| var y = 5 / x;
                  ^

References:
   no_parse_error.js:5:9
   5| var x = 'Test';
              ^^^^^^ [1]



Found 4 errors
